# alderson-dice

./: .gas-snapshot  .gitmodules  IDEAS.md  README.md  remappings.txt
foundry/: .gas-snapshot  .gitignore  env.example  foundry.toml  package.json  remappings.txt
foundry/script/: AldersonDiceGameV1.s.sol  DeployGameTokenMachine.sol  DeployV0.sol  DeployV1.sol
foundry/src/: AldersonDiceGameV0.sol  AldersonDiceGameV1.sol  AldersonDiceNFT.sol  AldersonDiceVaultDraftA.sol.off  GameToken.sol  GameTokenMachine.sol  GrimeDiceV0.sol  IntransitiveDiceNFT.sol  PointsToken.sol  PrizeFund.sol  YearnVaultV3.sol
foundry/src/abstract/: GamePiece.sol
foundry/src/games/: GrimeDiceV0.sol  PayTheDevs.sol
foundry/src/public_goods/: GameToken.sol  GameTokenMachine.sol  PointsToken.sol  PrizeFund.sol
foundry/src/public_goods/abstract/: GamePiece.sol
foundry/src/twab-controller/: README.md  TwabController.sol
foundry/src/twab-controller/libraries/: ObservationLib.sol  (+2 more)
foundry/test/: AldersonDiceGameV0.t.sol  AldersonDiceGameV1.t.sol  GameToken.t.sol  GrimeDiceV0.sol  GrimeDiceV0.t.sol  TwabController.t.sol  YearnVaultV3.t.sol
frontend-leptos/: .gitignore  Cargo.toml  README.md  build.rs  esbuild.js  index.html  package.json  tailwind.config.js  webpack.config.js
frontend-leptos/src/: eip1193.rs  eip6963.rs  main.rs  viem.rs
frontend-leptos/src-js/: AldersonDiceGameV0.json  AldersonDiceGameV1.json  AldersonDiceNFT.json  index.js  index.ts
src/: AldersonDice.sol  AldersonDiceGameV1.sol  AldersonDiceNFT.sol
src/abstract/: ERC6909.sol
test/: AldersonDiceGameV1.t.sol
(+2 files in other folders)
