[package]
name = "alderson-dice-frontend-leptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
ethers = "2.0.14"
js-sys = "0.3.69"
leptos = { version = "0.6.12", features = ["csr", "nightly"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0.117"
wasm-bindgen = { version = "0.2.92", features = ["serde"] }
wasm-bindgen-futures = "0.4.42"

[dependencies.web-sys]
version = "0.3"
features = ["Event", "EventTarget"]
